fixed image stretching when getting too small

--- a/style.css
+++ b/style.css
@@ -486,6 +486,7 @@ body.modal-open-mobile{
   max-width: 100%;
   margin-bottom: 1em;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 .project-modal-title{
@@ -588,6 +589,12 @@ body.modal-open-mobile{
     padding-right: 0;
     width: 90%;
     max-width: 90%;
+  }
+}
+
+@media only screen and (max-width: 360px){
+  .project-modal-image{
+    height: 150px;
   }
 }
 
